--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
                 <li><a href="/blog/newpost">new post</a></li>
                 <li><a href="/login">log in</a></li>
                 <li><a href="/logout">log out</a></li>
+                <li><a href="/signup">sign up</a></li>
             </ul>
         </nav>
         {% block content %}
